--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
+    "file-loader": "^4.2.0",
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3"
   },
