--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "webpack-glsl-loader": "^1.0.1"
   },
   "dependencies": {
     "three": "^0.115.0"
