--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "file-loader": "^4.2.0",
+    "gltf-webpack-loader": "^1.0.6",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
     "ts-loader": "^6.2.2",
